--- a/.project
+++ b/.project
@@ -17,9 +17,24 @@
 	</natures>
 	<linkedResources>
 		<link>
-			<name>kat-6159177473557162742.groovy</name>
+			<name>kat-1450396967137180351.groovy</name>
 			<type>1</type>
-			<location>C:/Users/vinh.le/AppData/Local/Temp/Katalon/Web Services/kat-6159177473557162742.groovy</location>
+			<location>C:/Users/vinh.le/AppData/Local/Temp/Katalon/Web Services/kat-1450396967137180351.groovy</location>
+		</link>
+		<link>
+			<name>kat-3919341074073928331.groovy</name>
+			<type>1</type>
+			<location>C:/Users/vinh.le/AppData/Local/Temp/Katalon/Web Services/kat-3919341074073928331.groovy</location>
+		</link>
+		<link>
+			<name>kat-4476313802946022938.groovy</name>
+			<type>1</type>
+			<location>C:/Users/vinh.le/AppData/Local/Temp/Katalon/Web Services/kat-4476313802946022938.groovy</location>
+		</link>
+		<link>
+			<name>kat-5588866189386978868.groovy</name>
+			<type>1</type>
+			<location>C:/Users/vinh.le/AppData/Local/Temp/Katalon/Web Services/kat-5588866189386978868.groovy</location>
 		</link>
 	</linkedResources>
 	<filteredResources>
