--- a/.project
+++ b/.project
@@ -21,6 +21,11 @@
 			<type>1</type>
 			<location>C:/Users/vinh.le/AppData/Local/Temp/Katalon/Web Services/kat-7274390470359534586.groovy</location>
 		</link>
+		<link>
+			<name>kat-891102106114109816.groovy</name>
+			<type>1</type>
+			<location>C:/Users/nhien.do/AppData/Local/Temp/Katalon/Web Services/kat-891102106114109816.groovy</location>
+		</link>
 	</linkedResources>
 	<filteredResources>
 		<filter>
