--- a/.project
+++ b/.project
@@ -17,6 +17,11 @@
 	</natures>
 	<linkedResources>
 		<link>
+			<name>kat-456998986683702737.groovy</name>
+			<type>1</type>
+			<location>C:/Users/nhien.do/AppData/Local/Temp/Katalon/Web Services/kat-456998986683702737.groovy</location>
+		</link>
+		<link>
 			<name>kat-6133461870399504815.groovy</name>
 			<type>1</type>
 			<location>C:/Users/vinh.le/AppData/Local/Temp/Katalon/Web Services/kat-6133461870399504815.groovy</location>
