--- a/.project
+++ b/.project
@@ -17,6 +17,11 @@
 	</natures>
 	<linkedResources>
 		<link>
+			<name>kat-1494264617062313925.groovy</name>
+			<type>1</type>
+			<location>C:/Users/vinh.le/AppData/Local/Temp/Katalon/Web Services/kat-1494264617062313925.groovy</location>
+		</link>
+		<link>
 			<name>kat-2667597074937879794.groovy</name>
 			<type>1</type>
 			<location>C:/Users/NHIEND~1/AppData/Local/Temp/Katalon/Web Services/kat-2667597074937879794.groovy</location>
@@ -30,6 +35,11 @@
 			<name>kat-6863172258520727785.groovy</name>
 			<type>1</type>
 			<location>C:/Users/LeVinh/AppData/Local/Temp/Katalon/Web Services/kat-6863172258520727785.groovy</location>
+		</link>
+		<link>
+			<name>kat-8735377970961821451.groovy</name>
+			<type>1</type>
+			<location>C:/Users/vinh.le/AppData/Local/Temp/Katalon/Web Services/kat-8735377970961821451.groovy</location>
 		</link>
 		<link>
 			<name>kat-891102106114109816.groovy</name>
