--- a/.project
+++ b/.project
@@ -17,6 +17,11 @@
 	</natures>
 	<linkedResources>
 		<link>
+			<name>kat-1741610004399564462.groovy</name>
+			<type>1</type>
+			<location>C:/Users/vinh.le/AppData/Local/Temp/Katalon/Web Services/kat-1741610004399564462.groovy</location>
+		</link>
+		<link>
 			<name>kat-2667597074937879794.groovy</name>
 			<type>1</type>
 			<location>C:/Users/NHIEND~1/AppData/Local/Temp/Katalon/Web Services/kat-2667597074937879794.groovy</location>
@@ -27,9 +32,24 @@
 			<location>C:/Users/nhien.do/AppData/Local/Temp/Katalon/Web Services/kat-456998986683702737.groovy</location>
 		</link>
 		<link>
+			<name>kat-657042489736618273.groovy</name>
+			<type>1</type>
+			<location>C:/Users/vinh.le/AppData/Local/Temp/Katalon/Web Services/kat-657042489736618273.groovy</location>
+		</link>
+		<link>
 			<name>kat-6863172258520727785.groovy</name>
 			<type>1</type>
 			<location>C:/Users/LeVinh/AppData/Local/Temp/Katalon/Web Services/kat-6863172258520727785.groovy</location>
+		</link>
+		<link>
+			<name>kat-7655212994629816496.groovy</name>
+			<type>1</type>
+			<location>C:/Users/vinh.le/AppData/Local/Temp/Katalon/Web Services/kat-7655212994629816496.groovy</location>
+		</link>
+		<link>
+			<name>kat-8272670600659834758.groovy</name>
+			<type>1</type>
+			<location>C:/Users/vinh.le/AppData/Local/Temp/Katalon/Web Services/kat-8272670600659834758.groovy</location>
 		</link>
 		<link>
 			<name>kat-891102106114109816.groovy</name>
