--- a/.project
+++ b/.project
@@ -67,6 +67,11 @@
 			<location>C:/Users/vinh.le/AppData/Local/Temp/Katalon/Web Services/kat-7811977676327450623.groovy</location>
 		</link>
 		<link>
+			<name>kat-8779173761297529764.groovy</name>
+			<type>1</type>
+			<location>C:/Users/vinh.le/AppData/Local/Temp/Katalon/Web Services/kat-8779173761297529764.groovy</location>
+		</link>
+		<link>
 			<name>kat-891102106114109816.groovy</name>
 			<type>1</type>
 			<location>C:/Users/nhien.do/AppData/Local/Temp/Katalon/Web Services/kat-891102106114109816.groovy</location>
